Added the --source parameter to list-available-scripts.pl, and include script source in full output.
Ensure that resource limits (CPU, RAM and procesess) are never set for the Apache user, even when it is a member of a domain's group for which limits are set.
Plugins can now define additional inputs to appear on the Create Virtual Server page and accepted by create-domain.pl, for options specific to the plugin's feature.
The master administrator can now grant himself access to scripts disabled for regular users, with a new form on the Script Installers page.
When the user or group for a domain is changed, references to the old user or group in lgorotate.conf are updated to the new values.
Re-try S3 bucket creation three times if at first it fails, to avoid temporary outages or network problems.
When setting up clamd, the provided example init script is copied instead of bring modified, so that it can be safely replaced by RPM upgrades.
Changed the meaning of the 'Can choose database names?' server owner restriction to just prevent modification of the domain's default database, instead of blocking all database management.
Mail aliases that forward to all users in a domain can now be created, using the Edit Mail Aliases page or create-simple-alias.pl.
SSL keys with passphrases can now be installed on the Manage SSL Certificate page, and trying to use a key that needs a passphrase without one being entered will display an error.
The clamd-stream-client virus scanner can be selected to offload the actual scanning process to clamd on a remote system, if you have it installed.
---- Changes since 3.63 ----
On systems running Postfix with spam filtering enabled, the ownership and permissions on the procmail wrapper command are validated as part of the configuration check to ensure that it is setuid and setgid to root.
Updated the TikiWiki script installer to version 2.2, Mantis to 1.1.4, and Gallery to 2.3.