@@ -1001,3 +1001,4 @@ The clamd-stream-client virus scanner can be selected to offload the actual scan
 ---- Changes since 3.63 ----
 On systems running Postfix with spam filtering enabled, the ownership and permissions on the procmail wrapper command are validated as part of the configuration check to ensure that it is setuid and setgid to root.
 Updated the TikiWiki script installer to version 2.2, Mantis to 1.1.4, and Gallery to 2.3.
+When a virtual server with slave DNS zones is disabled, then will be removed from slave servers to properly prevent DNS resolution of the domain. When it is re-enabled, the slave zones will be re-created.
